# recursive-agents

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_v2.md  pyproject.toml  streamlit_app.py
WEB_APP_Proprietary/backend/: main.py
WEB_APP_Proprietary/core/: chains.py
WEB_APP_Proprietary/domain_example_templates/: bug_triage_initial_sys.txt  generic_critique_sys.txt  generic_revision_sys.txt  marketing_initial_sys.txt  protocol_context.txt  strategy_initial_sys.txt
WEB_APP_Proprietary/frontend/: index.html
WEB_APP_Proprietary/frontend/src/: App.css  App.jsx
WEB_APP_Proprietary/recursive_companion/: __init__.py  base.py
WEB_APP_Proprietary/skeleton_templates/: protocol_context.txt  skeleton_critique_sys.txt  skeleton_initial_sys.txt  skelton_revision_sys.txt
WEB_APP_Proprietary/templates/: critique_sys.txt  critique_user.txt  initial_sys.txt  protocol_context.txt  revision_sys.txt  revision_user.txt
WEB_APP_recursive_companion_complete/backend/: requirements.txt
WEB_APP_recursive_companion_complete/frontend/: package-lock.json  package.json
WEB_APP_recursive_companion_complete/templates/: generic_critique_user.txt  generic_initial_sys.txt
core/: chains.py  streamlit_chains.py
demos/: langgraph.ipynb  multi_agent_demo_raw_rc.py  multi_agent_langgraph_demo.ipynb  multi_agent_langgraph_demo.py  multi_agent_langgraph_demo_new.ipynb  multi_agent_raw_ra_demo.ipynb  multi_agent_raw_ra_demo.py  multi_agent_raw_rc_demo.ipynb  multi_agent_raw_rc_demo.py  quick_setup.py
docs/: LangGraph_Compliment.md  LangGraph_RA_comp.md  LangGraph_RC_comp.md  LangGraph_comparison_compliment.md  RA_architecture.md  RC_architecture.md
experimental_type_multi_agent_demos/: langgraph_example.py
multi_agent_demos/: langgraph.ipynb  multi_agent_demo_raw_rc.py  multi_agent_langgraph_demo.py
recursive-agents-mcp/: pyproject.toml
recursive-agents-mcp/core/: data_tools.py  mcp_aware_chains.py
recursive-agents-mcp/mcp_server/: server.py  tools.py
recursive_agent_MCP/: Anthropic_AI_Safety_Fellow_Application.txt  DEVELOPMENT_NOTES.md  NEWST_server_v2.py
recursive_agent_MCP/Tracing Server_Client Communication and Session /: COMPLETE_STATE_SESSION_FLOW_ANALYSIS.md  MCP_STATE_SESSION_DEEP_DIVE.md  MEMORY_ARCHITECTURE.md  PROPOSED_SESSION_ARCHITECTURE.md  PROPOSED_SESSION_ARCHITECTURE_V2.md
recursive_agent_MCP/middleware/: README.md  phase_intelligence.py  phase_metrics.py  phase_validation.py
recursive_agent_MCP/resources/: memory_resources.py  metrics_resources.py  protocol_resource.py  resources_registry.py  session_metrics_resources.py  session_resources.py  template_resources.py
recursive_agent_MCP/schema/: common.py  inputs.py  outputs.py
recursive_agent_MCP/services/: companion_manager.py  session_persister.py  streaming_manager.py
recursive_agent_MCP/tests/: test_draft_terminal.py  test_tools_answers_conceptual.ipynb  test_tools_streaming.ipynb
recursive_agent_MCP/tools/: critique.py  draft.py  revise.py  tools_registry.py
recursive_agents/: __init__.py  base.py  streamlit.py  template_load_utils.py
recursive_agents_mcp/: README.md  __init__.py  pyproject.toml
recursive_agents_mcp/core/: data_tools.py  mcp_aware_chains.py  mcp_discovery.py
recursive_agents_mcp/mcp_server/: prompts.py  resources.py  tools.py
recursive_agents_mcp/templates/: mcp_critique_sys.txt
recursive_companion/: __init__.py  base.py  bug_triage_companion.py  generic_companion.py  marketing_companion.py  strategy_companion.py  streamlit.py  template_load_utils.py
templates/: custom_initial_sys.txt  generic_critique_user.txt  generic_revision_user.txt
tests/: Untitled-1.ipynb  quick_setup.py  test_database_query.py  test_final_answer.py  test_mcp_live_data.py  test_runlog.py
tests/notebooks/: multi_agent_langgraph_demo.ipynb  multi_agent_langgraph_demo_new.ipynb
