[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recursive-companion"
version = "0.1.0"
description = "A meta-framework for self-improving LLM responses through recursive critique and revision"
authors = [{ name="Henry Besser", email="henry.operator.research@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "llm", "agents", "recursive", "iteration", "recursion", "langchain", "critique", "revision", "meta-framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.3.20",
    "langchain-openai>=0.3.20",
    "langchain-core>=0.3.60",
    "openai>=1.92.0",
    "numpy>=2.3.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.46.0",
]
demos = [
    "langgraph>=0.5.0",
]

all = [
    "recursive-companion[streamlit,demos]",
]

[project.urls]
Homepage = "https://github.com/hankbesser/recursive-companion"
Documentation = "https://github.com/hankbesser/recursive-companion#readme"
Repository = "https://github.com/hankbesser/recursive-companion"
Issues = "https://github.com/hankbesser/recursive-companion/issues"

[tool.setuptools]
packages = ["recursive_companion", "core"]
include-package-data = true

[tool.setuptools.package-data]
"" = ["templates/*.txt"]  # Root package
